installments/traefik/20-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service

spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: home-assistant
spec:
  type: NodePort
  externalIPs:
    - 192.168.1.10
  ports:
    - port: 80
      name: unsecure-web
      targetPort: 80
    - port: 443
      name: secure-web
      targetPort: 443
  selector:
    app: traefik
